# website

./: Cargo.toml  Dioxus.toml  Dockerfile  README.md
.github/: deploy.yml
.github/workflows/: deploy.yml
assets/: tailwind.css
src/: main.rs
