[package]
name = "nomadlibre-website"
version = "0.1.0"
authors = ["Arijit Pal <arijitpaljit@gmail.com>"]
edition = "2021"

[dependencies]
dioxus = { version = "0.7.3", features = ["router", "web"] }

# Optimize for file size and strip DWARF debug info to prevent wasm-opt crashes
[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
